--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "dvc>=3.66.1",
     "numpy>=2.4.2",
     "pandas>=3.0.1",
-    "pymongo>=4.16.0",
+    "pymongo[srv]>=4.16.0",
     "python-dotenv>=1.2.1",
     "scikit-learn>=1.8.0",
 ]
